--- a/package.json
+++ b/package.json
@@ -16,8 +16,23 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@fontsource/inter": "^4.5.14",
+    "@mdx-js/react": "^2.1.5",
+    "@theme-ui/mdx": "^0.15.1",
+    "framer-motion": "^7.5.3",
     "gatsby": "^4.24.4",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-theme-ui": "^0.15.2-canary.1",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "nodejs": "0.0.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.0",
+    "react-scroll": "^1.8.7",
+    "theme-ui": "^0.15.1"
   }
 }
