--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "gatsby-starter-minimal",
+  "name": "andrew-lam",
   "version": "1.0.0",
-  "private": true,
-  "description": "A Gatsby starter with no plugins and a single welcome page.",
-  "author": "Laurie Barth",
+  "description": "Andrew Lam's personal website",
+  "author": "Andrew Lam",
   "keywords": [
     "gatsby"
   ],
@@ -30,6 +29,7 @@
     "nodejs": "0.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
     "react-scroll": "^1.8.7",
