--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodejs": "0.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-headroom": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-intersection-observer": "^9.4.0",
